k8s/backend/affinity-test.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: affinity-test
  namespace: task-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: affinity-test

  template:
    metadata:
      labels:
        app: affinity-test

    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: disk
                    operator: In
                    values:
                      - ssd

      containers:
        - name: nginx
          image: nginx:latest
