k8s/backend/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend
  namespace: task-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      nodeSelector:
        workload: backend
      containers:
        - name: backend
          image: task-platform-backend:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
