k8s/backend/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: backend
  namespace: task-platform

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
